# aer-data-pipeline

./: .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  build_duckdb.py  cli.py  docker-compose.yml  pyproject.toml  requirements.txt  ruff.toml
.github/workflows/: build.yml  test.yml
config/: schemas.py  sources.yaml
docs/: data_dictionary.md  query_cookbook.md
downloader/: base.py  html_index.py  ingestion_log.py  manifest.py
parsers/: csv_parser.py  shapefile_parser.py  sk_parser.py  txt_parser.py  xlsx_parser.py
registry/: loader.py
tests/: conftest.py  test_core.py
transforms/: __init__.py  bronze.py  silver.py
validation/: checks.py
