[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "aer-data-pipeline"
version = "1.0.0"
description = "Alberta & Saskatchewan oil and gas public data pipeline"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
dependencies = [
    "requests>=2.31.0",
    "httpx>=0.25.0",
    "pandas>=2.0.0",
    "pyarrow>=14.0.0",
    "duckdb>=0.9.0",
    "pyyaml>=6.0.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "click>=8.1.0",
    "python-dateutil>=2.8.0",
]

[project.optional-dependencies]
geo = ["geopandas>=0.14.0", "shapely>=2.0.0", "openpyxl>=3.1.0"]
dev = ["pytest", "ruff"]

[project.scripts]
aer-pipeline = "cli:cli"
